--- a/gstreamer-sharp-netcore.csproj
+++ b/gstreamer-sharp-netcore.csproj
@@ -33,4 +33,8 @@
     <Compile Include="gstreamer-sharp\sources\generated\**\*.cs" Exclude="gstreamer-sharp\sources\generated\Gst\PadTemplate.cs" />
     <Compile Include="gst-netcore\**\*.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="samples\**" />
+    <None Remove="samples\**" />
+  </ItemGroup>
 </Project>
