--- a/samples/AvaloniaPlayer/GStreamerPlayer.csproj
+++ b/samples/AvaloniaPlayer/GStreamerPlayer.csproj
@@ -1,29 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-  </PropertyGroup>
-  <PropertyGroup>
-    <UseAppHost>true</UseAppHost>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\gstreamer-sharp-netcore.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="GLibSharp" Version="3.22.25.74" />
-    <!--<PackageReference Include="gstreamer-sharp-netcore" Version="0.0.8" />-->
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Avalonia" Version="0.9.9" />
-    <PackageReference Include="Avalonia.Desktop" Version="0.9.9" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="**\*.xaml.cs">
-      <DependentUpon>%(Filename)</DependentUpon>
-    </Compile>
-    <AvaloniaResource Include="**\*.xaml">
-      <SubType>Designer</SubType>
-    </AvaloniaResource>
-  </ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
+		</PropertyGroup>
+	<PropertyGroup>
+		<UseAppHost>true</UseAppHost>
+	</PropertyGroup>
+	<PropertyGroup>
+		<Avalonia_I_Want_To_Use_Private_Apis_In_Nuget_Package_And_Promise_To_Pin_The_Exact_Avalonia_Version_In_Package_Dependency>
+			true
+		</Avalonia_I_Want_To_Use_Private_Apis_In_Nuget_Package_And_Promise_To_Pin_The_Exact_Avalonia_Version_In_Package_Dependency>
+		<AvaloniaAccessUnstablePrivateApis>true</AvaloniaAccessUnstablePrivateApis>
+	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\gstreamer-sharp-netcore.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Avalonia" Version="[11.3.7]" />
+		<PackageReference Include="Avalonia.Desktop" Version="11.3.7" />
+		<PackageReference Include="Avalonia.Diagnostics" Version="11.3.7" />
+		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.7" />
+		<PackageReference Include="GLibSharp" Version="3.22.25.74" />
+		<!--<PackageReference Include="gstreamer-sharp-netcore" Version="0.0.8" />-->
+	</ItemGroup>
+	<ItemGroup>
+		<Compile Update="**\*.xaml.cs">
+			<DependentUpon>%(Filename)</DependentUpon>
+		</Compile>
+		<AvaloniaResource Include="**\*.xaml">
+			<SubType>Designer</SubType>
+		</AvaloniaResource>
+	</ItemGroup>
 </Project>
