--- a/samples/AvaloniaPlayer/GStreamerPlayer.csproj
+++ b/samples/AvaloniaPlayer/GStreamerPlayer.csproj
@@ -13,15 +13,10 @@
 		<AvaloniaAccessUnstablePrivateApis>true</AvaloniaAccessUnstablePrivateApis>
 	</PropertyGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\..\gstreamer-sharp-netcore.csproj" />
-	</ItemGroup>
-	<ItemGroup>
 		<PackageReference Include="Avalonia" Version="[11.3.7]" />
 		<PackageReference Include="Avalonia.Desktop" Version="11.3.7" />
 		<PackageReference Include="Avalonia.Diagnostics" Version="11.3.7" />
 		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.7" />
-		<PackageReference Include="GLibSharp" Version="3.22.25.74" />
-		<!--<PackageReference Include="gstreamer-sharp-netcore" Version="0.0.8" />-->
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Update="**\*.xaml.cs">
@@ -30,5 +25,19 @@
 		<AvaloniaResource Include="**\*.xaml">
 			<SubType>Designer</SubType>
 		</AvaloniaResource>
+	</ItemGroup>
+<ItemGroup>
+	  <Folder Include="Properties\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Reference Include="gio-sharp">
+	    <HintPath>..\Gstreamer-Sharp-DLLs\gio-sharp.dll</HintPath>
+	  </Reference>
+	  <Reference Include="glib-sharp">
+	    <HintPath>..\Gstreamer-Sharp-DLLs\glib-sharp.dll</HintPath>
+	  </Reference>
+	  <Reference Include="gstreamer-sharp">
+	    <HintPath>..\Gstreamer-Sharp-DLLs\gstreamer-sharp.dll</HintPath>
+	  </Reference>
 	</ItemGroup>
 </Project>
