--- a/samples/ConsoleSample/Netcore3ConsoleSample.csproj
+++ b/samples/ConsoleSample/Netcore3ConsoleSample.csproj
@@ -1,17 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <PropertyGroup>
     <UseAppHost>true</UseAppHost>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\gstreamer-sharp-netcore.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="GLibSharp" Version="3.22.25.74" />
-    <!--<PackageReference Include="gstreamer-sharp-netcore" Version="0.0.8" />-->
+    <Reference Include="gio-sharp">
+      <HintPath>..\Gstreamer-Sharp-DLLs\gio-sharp.dll</HintPath>
+    </Reference>
+    <Reference Include="glib-sharp">
+      <HintPath>..\Gstreamer-Sharp-DLLs\glib-sharp.dll</HintPath>
+    </Reference>
+    <Reference Include="gstreamer-sharp">
+      <HintPath>..\Gstreamer-Sharp-DLLs\gstreamer-sharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
